sed -i 's/xivo.fr/xivo.io/g'

--- a/provd-2012-09-21/provd.html
+++ b/provd-2012-09-21/provd.html
@@ -172,7 +172,7 @@ Logs
     dhcpd: DHCPACK on 10.42.1.100 to 00:0f:d3:05:48:48 via eth0
 
 ---
-section: Upload et MAJ de la config DHCP sur provd.xivo.fr
+section: Upload et MAJ de la config DHCP sur provd.xivo.io
 
 xivo-skaro/provisioning/dhcpd-update
 
@@ -287,9 +287,9 @@ section: Recuperation Info sur le telephone
 
 (Cliquez sur les liens pour voir les fichiers)
 
-[common.py: DigiumDHCPDeviceInfoExtractor](http://git.xivo.fr/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/common/common.py;h=e2654217ba0d36aba77408e2f510734dae7451de;hb=HEAD#l36)
+[common.py: DigiumDHCPDeviceInfoExtractor](http://git.xivo.io/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/common/common.py;h=e2654217ba0d36aba77408e2f510734dae7451de;hb=HEAD#l36)
 
-[common.py: DigiumHTTPDeviceInfoExtractor](http://git.xivo.fr/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/common/common.py;h=e2654217ba0d36aba77408e2f510734dae7451de;hb=HEAD#l64)
+[common.py: DigiumHTTPDeviceInfoExtractor](http://git.xivo.io/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/common/common.py;h=e2654217ba0d36aba77408e2f510734dae7451de;hb=HEAD#l64)
 
 Logs
 
@@ -303,34 +303,34 @@ section: Association telephone <-> plugin
 
 (Cliquez sur les liens pour voir les fichiers)
 
-[common.py: DigiumPgAssociator](http://git.xivo.fr/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/common/common.py;h=e2654217ba0d36aba77408e2f510734dae7451de;hb=HEAD#l82)
+[common.py: DigiumPgAssociator](http://git.xivo.io/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/common/common.py;h=e2654217ba0d36aba77408e2f510734dae7451de;hb=HEAD#l82)
 
 ---
 section: Configuration telephone
 
 (Cliquez sur les liens pour voir les fichiers)
 
-[common.py: BaseDigiumPlugin](http://git.xivo.fr/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/common/common.py;h=e2654217ba0d36aba77408e2f510734dae7451de;hb=HEAD#l100)
+[common.py: BaseDigiumPlugin](http://git.xivo.io/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/common/common.py;h=e2654217ba0d36aba77408e2f510734dae7451de;hb=HEAD#l100)
 
 ---
 section: Templates telephone
 
 (Cliquez sur les liens pour voir les fichiers)
 
-[common/templates/base.tpl](http://git.xivo.fr/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/common/templates/base.tpl;h=b5ba2df875b3c28d04fd44d39896abab33467806;hb=HEAD)
+[common/templates/base.tpl](http://git.xivo.io/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/common/templates/base.tpl;h=b5ba2df875b3c28d04fd44d39896abab33467806;hb=HEAD)
 
-[common/templates/contact.tpl](http://git.xivo.fr/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/common/templates/contact.tpl;h=8178fd65e20823aca85bbd82cb115da83c788183;hb=HEAD)
+[common/templates/contact.tpl](http://git.xivo.io/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/common/templates/contact.tpl;h=8178fd65e20823aca85bbd82cb115da83c788183;hb=HEAD)
 
-[1.1.0.0/templates/D40.tpl](http://git.xivo.fr/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/1.1.0.0/templates/D40.tpl;h=0e0a0774edcaf3eac0a2ed3169feb14d236d250a;hb=HEAD)
+[1.1.0.0/templates/D40.tpl](http://git.xivo.io/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/1.1.0.0/templates/D40.tpl;h=0e0a0774edcaf3eac0a2ed3169feb14d236d250a;hb=HEAD)
 
-[1.1.0.0/templates/D50.tpl](http://git.xivo.fr/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/1.1.0.0/templates/D50.tpl;h=d7881c898a7692cc9fbefcb585e1636730c9cac0;hb=HEAD)
+[1.1.0.0/templates/D50.tpl](http://git.xivo.io/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/1.1.0.0/templates/D50.tpl;h=d7881c898a7692cc9fbefcb585e1636730c9cac0;hb=HEAD)
 
-[1.1.0.0/templates/D70.tpl](http://git.xivo.fr/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/1.1.0.0/templates/D70.tpl;h=95ae4eac1a767322e5cef5ff68dce02ba1edad61;hb=HEAD)
+[1.1.0.0/templates/D70.tpl](http://git.xivo.io/?p=official/xivo-skaro.git;a=blob;f=provisioning/plugins/xivo-digium/1.1.0.0/templates/D70.tpl;h=95ae4eac1a767322e5cef5ff68dce02ba1edad61;hb=HEAD)
 
 ---
-section: Upload du plugin sur provd.xivo.fr
+section: Upload du plugin sur provd.xivo.io
 
-Ne pas oublier de changer le mirror dans Configuration -> Provisioning -> General pour http://provd.xivo.fr/plugins/1/testing/
+Ne pas oublier de changer le mirror dans Configuration -> Provisioning -> General pour http://provd.xivo.io/plugins/1/testing/
 
 En dev:
 
